                HomGroupPresentation:
            - Now uses size_t instead of unsigned long throughout for
              generator counts and generator indices.
            - The depth argument to GroupPresentation::proliferateRelators()
              is now of type int.
        Class PermClass<n>:
            - Everything in this class is now constexpr.
        Function valueOf():
            - The native C++ integer versions of valueOf() are now templated.
            - The unsigned integer versions now reject negative numbers
              instead of performing wrap-around arithmetic.
            - All numeric versions of valueOf() (native integers and double)
              have been tightened with respect to unexpected characters,
              including leading and trailing whitespace:
              + they always return false, as the documentation has always
                promised (in the past, they succeeded in the presence of
                leading whitespace);
              + instead of performing the conversion "as best it can", the
                documentation now states that the value stored in dest is
                undefined.
        Constant is_cpp_integer_v<T>, is_signed_cpp_integer_v<T>,
                is_unsigned_cpp_integer_v<T>:
            - New compile-time constant is_signed_cpp_integer_v<T>.
            - All three constants are now false when T == bool (previously,
              is_cpp_integer_v<bool> and is_unsigned_cpp_integer_v<bool> were
              both true).
        Concept CppInteger, StandardCppInteger, SignedCppInteger,
                UnsignedCppInteger:
            - New concepts for detecting native C++ integers and related types.
        Concept ReginaInteger, ArbitraryPrecisionInteger, IntegerVector,
                ArbitraryPrecisionIntegerVector, RingLike, Ring:
            - New concepts for detecting various mathematical types.

Version 7.4.1  [ 30 November, 2025 ]

    GENERAL: